--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "ali/tb",
     "description": "Telegram bot",
     "require": {
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
     },
